--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 <link rel="stylesheet" href="style.css">
+        <title>Bhavesh vaswani</title>
     </head>
     <body class="body">
         <section class="game">
